# gMath

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  build.rs
.cargo/: config.toml
.github/: FUNDING.yml
docs/: GMATH_0_3_90_INFERENCE_GUIDE.md  TQ19_MANIFERENCE_HANDOUT.md
examples/: quickstart.rs
scripts/: compute_convergents.py  generate_compact_refs.py  generate_domain_arithmetic_refs.py  generate_fasc_ulp_references.py  generate_topology_sweep.py  generate_ulp_references.py  generate_zasc_ulp_references.py
src/: deployment_profiles.rs  lib.rs
src/deployment_profiles/: tests.rs
src/fixed_point/: canonical.rs  frac_config.rs  mod.rs
src/fixed_point/core_types/: domain_metadata.rs  errors.rs  mod.rs  precision.rs
src/fixed_point/domains/: mod.rs
src/fixed_point/domains/balanced_ternary/: mod.rs  ternary_addition.rs  ternary_division.rs  ternary_multiplication.rs  ternary_negation.rs  ternary_types.rs  trit_packing.rs  trit_q1_9.rs
src/fixed_point/domains/binary_fixed/: binary_addition.rs  binary_division.rs  binary_multiplication.rs  binary_negation.rs  binary_types.rs  i1024.rs  i2048.rs  i256.rs  i512.rs  mod.rs
src/fixed_point/domains/binary_fixed/transcendental/: atan_tier_n_plus_1.rs  exp_tier_n_plus_1.rs  ln_tier_n_plus_1.rs  mod.rs  pow_tier_n_plus_1.rs  sin_cos_tier_n_plus_1.rs  sqrt_tier_n_plus_1.rs
src/fixed_point/domains/decimal_fixed/: d256.rs  d512.rs  decimal_addition.rs  decimal_division.rs  decimal_fixed.rs  decimal_multiplication.rs  decimal_negation.rs  decimal_types.rs  mod.rs
src/fixed_point/domains/symbolic/: mod.rs  symbolic_arithmetic.rs
src/fixed_point/domains/symbolic/rational/: mathematical_constants.rs  mod.rs  rational_conversion.rs  rational_number.rs
src/fixed_point/domains/symbolic/rational/tests/: integration_test.rs  mod.rs
src/fixed_point/imperative/: compute_matrix.rs  curvature.rs  decompose.rs  derived.rs  fiber_bundle.rs  fixed_matrix.rs  fixed_point.rs  fixed_vector.rs  fused.rs  lie_group.rs  linalg.rs  manifold.rs  matrix_functions.rs  mod.rs  ode.rs  projective.rs  serialization.rs  tensor.rs
src/fixed_point/tables/: mod.rs  prime_table.rs
src/fixed_point/tq19/: mod.rs  ops.rs  simd.rs
src/fixed_point/universal/: mod.rs  tier_types.rs  ugod.rs
src/fixed_point/universal/fasc/: domain_matrix.rs  lazy_expr.rs  lazy_matrix_expr.rs  mod.rs
src/fixed_point/universal/fasc/stack_evaluator/: arithmetic.rs  compute.rs  conversion.rs  domain.rs  formatting.rs  mod.rs  parsing.rs  tests.rs  transcendentals.rs
src/fixed_point/universal/zasc/: lazy_expr.rs  mod.rs  mode.rs
src/fixed_point/universal/zasc/stack_evaluator/: conversion.rs  formatting.rs  mod.rs  tests.rs  transcendentals.rs
src/generated_tables/: ln_q128_128_tables.rs  ln_q256_256_tables.rs  ln_q512_512_tables.rs  ln_q64_64_tables.rs  mathematical_constants.rs  prime_table.rs  q128_128_tables.rs  q256_256_tables.rs  q512_512_tables.rs  q64_64_tables.rs  trig_constants.rs
tests/: arithmetic_sweep_validation.rs  boundary_stress.rs  compact_profile_validation.rs  compound_operations.rs  comprehensive_benchmark.rs  decompose_adversarial.rs  decompose_mpmath_validation.rs  decompose_ulp_measurement.rs  decompose_validation.rs  domain_arithmetic_validation.rs  domain_matrix_validation.rs  eigen_svd_schur_validation.rs  error_handling.rs  fasc_ulp_validation.rs  fused_ops_validation.rs  fused_transcendentals_validation.rs  incremental_wins_validation.rs  l1c_l1d_l3a_validation.rs  l1d_l3a_ulp_measurement.rs  l2a_l5a_ulp_measurement.rs  l2a_ode_validation.rs  l3b_curvature_validation.rs  l3c_spd_grassmannian_validation.rs  l4a_lie_group_validation.rs  l4a_mpmath_validation.rs  l4b_projective_validation.rs  l5a_fiber_bundle_validation.rs  lazy_matrix_validation.rs  linalg_validation.rs  mode_routing_validation.rs  q8_24_validation.rs  realtime_profile_validation.rs  s1_serialization_extended.rs  tensor_validation.rs  tq19_bench.rs  tq19_validation.rs  trace_asinh.rs  trace_asinh2.rs  trace_chain.rs  trace_coeffs.rs  (+15 more)
tests/data/: domain_arith_refs_common.rs  domain_arith_refs_q128_128.rs  domain_arith_refs_q256_256.rs  domain_arith_refs_q64_64.rs  fasc_ulp_refs_q128_128.rs  fasc_ulp_refs_q16.rs  fasc_ulp_refs_q256_256.rs  fasc_ulp_refs_q32.rs  fasc_ulp_refs_q64_64.rs  topology_sweep_cross.rs  topology_sweep_decimal.rs  topology_sweep_q128_128.rs  topology_sweep_q256_256.rs  topology_sweep_q64_64.rs  topology_sweep_symbolic.rs  ulp_refs_q128_128.rs  ulp_refs_q256_256.rs  ulp_refs_q64_64.rs  zasc_ulp_refs_q128_128.rs  zasc_ulp_refs_q256_256.rs  zasc_ulp_refs_q64_64.rs
